--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!---meta http-equiv="Refresh" content="0; url=public/index.html"--->
+<meta http-equiv="Refresh" content="0; url=public/index.html">
 <!DOCTYPE html>
 <html lang="">
   <head>
