--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Refresh" content="0; url=public/index.html">
-<!DOCTYPE html>
+<!---DOCTYPE html>
 <html lang="">
   <head>
     <meta charset="utf-8">
@@ -13,6 +13,6 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    < !-- built files will be auto injected -- >
   </body>
-</html>
+</html--->
